* jQueryFixes.js: * GGC.TestCaseGenerator.csproj: * GGC.TestCaseGenerator.dll: * GGC.TestCaseGenerator.pdb: * CoverageGroup.cshtml: * GGC.TestCaseGenerator.dll: * GGC.TestCaseGenerator.pdb: * GGC.TestCaseGenerator.csproj.FileListAbsolute.txt: * GGC.TestCaseGenerator.csprojAssemblyReference.cache: * GGC.TestCaseGenerator.csproj.CoreCompileInputs.cache:
* Index.cshtml: Added the onclick textbox button to coverage groups

--- a/GGC.TestCaseGenerator/GGC.TestCaseGenerator.csproj
+++ b/GGC.TestCaseGenerator/GGC.TestCaseGenerator.csproj
@@ -167,6 +167,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\AddSpecification.cshtml" />
     <Content Include="Views\Home\CoverageGroup.cshtml" />
+    <Content Include="Content\jQueryFixes.js" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -211,6 +212,11 @@
         </WebProjectProperties>
       </FlavorProperties>
     </VisualStudio>
+    <MonoDevelop>
+      <Properties>
+        <XspParameters Port="8080" Address="127.0.0.1" SslMode="None" SslProtocol="Default" KeyType="None" CertFile="" KeyFile="" PasswordOptions="None" Password="" Verbose="True" />
+      </Properties>
+    </MonoDevelop>
   </ProjectExtensions>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
