--- a/GGC.TestCaseGenerator/GGC.TestCaseGenerator.csproj
+++ b/GGC.TestCaseGenerator/GGC.TestCaseGenerator.csproj
@@ -174,6 +174,7 @@
     <Content Include="Views\Home\InputParameter.cshtml" />
     <Content Include="Views\Home\HowTo.cshtml" />
     <Content Include="Views\Home\AddMembers.cshtml" />
+    <Content Include="Views\Home\Resources.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
