--- a/GGC.TestCaseGenerator/GGC.TestCaseGenerator.csproj
+++ b/GGC.TestCaseGenerator/GGC.TestCaseGenerator.csproj
@@ -152,7 +152,8 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
-    <Content Include="Scripts\specification-converage.js" />
+    <Content Include="Scripts\specification-addgroup.js" />
+    <Content Include="Scripts\specification-addmember.js" />
     <Content Include="Scripts\test-reference.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
