--- a/GGC.TestCaseGenerator/GGC.TestCaseGenerator.csproj
+++ b/GGC.TestCaseGenerator/GGC.TestCaseGenerator.csproj
@@ -151,6 +151,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\showInputField.js" />
+    <Content Include="Scripts\specification-expectedresult.js" />
     <Content Include="Scripts\specification-inputparameter.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
