--- a/GGC.TestCaseGenerator/GGC.TestCaseGenerator/GGC.TestCaseGenerator.csproj
+++ b/GGC.TestCaseGenerator/GGC.TestCaseGenerator/GGC.TestCaseGenerator.csproj
@@ -168,6 +168,7 @@
     <Content Include="Scripts\specification-addgroup.js" />
     <Content Include="Scripts\specification-addmember.js" />
     <Content Include="Scripts\specification-addspecification.js" />
+    <Content Include="Scripts\specification-expectedresult.js" />
     <Content Include="Scripts\specification-inputparameter.js" />
     <Content Include="Scripts\specification-result.js" />
     <Content Include="Scripts\test-reference.js" />
